
    - Support being able to pass a list of repositories to view via
      configuration, rather than having a static directory.
    - Installation and configuration documentation has been enhanced.
    - Project has been renamed Repository to correspond with normal git
      terminology.
    - Repos has been refactored into a CollectionOfRepositories role
      and two differnet concrete implementations (the Catalyst model
      chooses which type to build based on the config).
    - Remove all tabs and fix no tabs test (Dagfinn Ilmari Mannsåker)
    - Decode getpwuid values correctly (Dagfinn Ilmari Mannsåker)

0.000003 2009-12-09
    - Officially switch repository to Shadowcat
    - Officially switch bug tracker to rt.cpan.org
    - Start streamlining and generally rejiging the layout.
    - Hacked in syntax highlighting to the blame view.
    - Further tweaks to the blame view, making it more informative.
    - Dropped the dependency on File::Stat::ModeString
    - Move all POD below the code, for ::Repo and ::Project.

0.000002 2009-12-06
   - Add documentation about how to configure a Gitalist instance.
   - Fix so that invalid repository directory will be detected at application
     startup and a helpful error message will be displayed.
   - Add --repos_dir command line parameter to all of the scripts which can
     be used to force the repository directory, overriding config and
     environment.
   - Add GITALIST_REPOS_DIR environment variable which will determine the
     repository path (overriding normal config) if set.
   - Change so that no default repos path is in the config when installed from
     CPAN (when checked out of git, behavior of browsing AppDir/../ is
     maintained).
   - Do not allow directory traversal via the p param.

0.000001
   - No changes since last dev release.

0.000000_02  UNRELEASED
   - Fixed history action, other minor cleanups.

0.000000_01  UNRELEASED
   - Initial release to CPAN