@@ -10,6 +10,8 @@ This file documents the revision history for Perl extension Gitalist.
       chooses which type to build based on the config).
     - Remove all tabs and fix no tabs test (Dagfinn Ilmari Mannsåker)
     - Decode getpwuid values correctly (Dagfinn Ilmari Mannsåker)
+    - Generate correct provides information in META.yml so that search.cpan
+      indexes the classes contained in Gitalist correctly.
 
 0.000003 2009-12-09
     - Officially switch repository to Shadowcat
